feat: Enhance MIDI transcription output and update frontend navigation
- Added serialization for note events in MIDI transcription output.
- Updated response structure to include a list of notes for better compatibility.
- Redirected users from the DAW editor to the MIDI editor with a notification.
- Modified the MIDI editor to include a button for returning to the dashboard.
- Implemented auto-open functionality for audio upload when coming from the dashboard.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -156,12 +156,25 @@
 
   <script>
     function createNewProject() {
-      const projectId = 'project-' + Date.now();
-      window.location.href = `editor.html?id=${projectId}`;
+      // Generate a unique project ID
+      const projectId = 'project_' + Date.now();
+      const projectName = 'New Beat';
+
+      // Store project info
+      localStorage.setItem('currentProjectId', projectId);
+      localStorage.setItem('currentProjectName', projectName);
+
+      // Redirect to dashboard instead of directly to MIDI editor
+      window.location.href = `dashboard.html?projectId=${encodeURIComponent(projectId)}&projectName=${encodeURIComponent(projectName)}`;
     }
 
     function openEditor(projectId) {
-      window.location.href = `editor.html?id=${projectId}`;
+      // When opening an existing project, go to dashboard first
+      const projectName = projectId.replace(/-/g, ' ').replace(/\b\w/g, l => l.toUpperCase());
+      localStorage.setItem('currentProjectId', projectId);
+      localStorage.setItem('currentProjectName', projectName);
+
+      window.location.href = `dashboard.html?projectId=${encodeURIComponent(projectId)}&projectName=${encodeURIComponent(projectName)}`;
     }
   </script>
 </body>
