--- a/frontend/midi-editor.html
+++ b/frontend/midi-editor.html
@@ -78,6 +78,7 @@
             <div class="controls">
                 <input type="file" id="audioInput" class="file-input" accept=".mp3,.wav,.flac,.ogg,.m4a">
                 <input type="file" id="midiInput" class="file-input" accept=".mid,.midi">
+                <button class="btn btn-secondary" onclick="returnToDashboard()" style="margin-right: 10px;">← Dashboard</button>
                 <button class="btn btn-primary" onclick="document.getElementById('audioInput').click()">Upload Audio</button>
                 <button class="btn btn-secondary" onclick="document.getElementById('midiInput').click()">Open MIDI</button>
                 <button class="btn btn-secondary" onclick="saveMIDI()" id="saveBtn" disabled>Save MIDI</button>
