--- a/frontend/workspace.html
+++ b/frontend/workspace.html
@@ -13,6 +13,11 @@
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
+  <!-- Socket.IO client served by backend -->
+  <script src="/socket.io/socket.io.js"></script>
+  <!-- Lightweight collab client wrapper -->
+  <script src="collab-client.js"></script>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
