--- a/frontend/workspace.html
+++ b/frontend/workspace.html
@@ -49,6 +49,9 @@
   <!-- Babel Standalone for JSX transformation (must load before JSX scripts) -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
+  <!-- Global Audio Transcriber helper (must load before React component uses it) -->
+  <script src="audio-transcriber.js"></script>
+
   <!-- Load the React component -->
   <script type="text/babel" src="dashboard.jsx"></script>
 
