feat: Integrate Redis for Socket.io and enhance authentication flow
- Added Redis adapter for Socket.io to support scaling in production.
- Updated server.js to initialize Redis clients and connect them to Socket.io.
- Enhanced error handling in authentication endpoints to include error codes in responses.
- Introduced a health check endpoint for server status monitoring.
- Improved frontend authentication flow with dynamic backend URL configuration and user feedback for email verification.
- Refactored email verification process to streamline user experience during signup and verification.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,18 @@
       }
     }
   </script>
+  <script>
+    (function redirectIfUnauthenticated() {
+      const hasToken = Boolean(localStorage.getItem('idToken'));
+      if (!hasToken) {
+        const loginPage = 'login.html';
+        const path = window.location.pathname || '';
+        if (!path.endsWith(`/${loginPage}`) && !path.endsWith(loginPage)) {
+          window.location.replace(`${loginPage}${window.location.search}${window.location.hash}`);
+        }
+      }
+    })();
+  </script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
     .doc-preview {
