--- a/frontend/auth.html
+++ b/frontend/auth.html
@@ -29,10 +29,11 @@
   <link rel="icon" href="#" />
   <meta name="color-scheme" content="light" />
   <meta name="description" content="Sign in, sign up, verify, and reset your password." />
-  <script defer src="auth.js"></script>
+  <script src="config.js"></script>
   <script>
     // Configure backend URL
-    const BACKEND_URL = 'http://localhost:1234';
+    const isLocal = ['localhost', '127.0.0.1'].includes(window.location.hostname);
+    const BACKEND_URL = window.BACKEND_URL || (isLocal ? 'http://localhost:1234' : '');
 
     // Configure backend API endpoints
     window.AUTH_API = {
@@ -45,13 +46,13 @@
     };
     // Set to true if your API uses cookies/sessions and expects credentials
     window.AUTH_WITH_CREDENTIALS = false;
+    console.log('Backend URL configured:', BACKEND_URL);
   </script>
   <style>
     .card { box-shadow: 0 8px 30px rgba(0,0,0,0.08) }
-    #signin-section { display: none; }
   </style>
   <noscript>JavaScript is required for authentication.</noscript>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com https://fonts.gstatic.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com data: blob:; connect-src 'self' http://localhost:1234 https://localhost:1234;" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com https://fonts.gstatic.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com data: blob:; connect-src 'self' http://localhost:1234 https://localhost:1234 https://d1dut83snnf5pc.cloudfront.net;" />
   <meta name="referrer" content="no-referrer" />
 </head>
 <body class="bg-panel-bg text-dark-text font-sans min-h-screen">
