refactor: Rename VYBE to MUSE across documentation and scripts
- Updated all references from VYBE to MUSE in documentation files, including AWS setup, deployment guides, and integration summaries.
- Renamed variables and configurations in scripts to reflect the new MUSE branding.
- Adjusted backend and frontend configurations to ensure consistent naming and functionality.
- Enhanced clarity in setup and deployment instructions for the MUSE application.

--- a/frontend/workspace.html
+++ b/frontend/workspace.html
@@ -20,6 +20,9 @@
     })();
   </script>
 
+  <!-- Backend configuration -->
+  <script src="config.js"></script>
+
   <!-- Socket.IO client served by backend -->
   <script src="/socket.io/socket.io.js"></script>
   <!-- Lightweight collab client wrapper -->
